Fix error with white space on the right side

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ body {
 }
 
 .method-container {
-  width: 100%;
+  max-width: 100vw;
 }
 
 .method-heading {
